<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">面懵懵</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="weixin_logon">微信登录</string>
    <string name="qq_logon">QQ登录</string>
    <string name="clear_Cache">清除缓存</string>
    <string name="logoff">退出</string>
    <string name="news">消息</string>


</resources>
