<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="250dp"
    android:layout_height="400dp"
    android:background="@drawable/border_gray"
    >
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        />
    <Button
        android:id="@+id/logon_weixin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/weixin_logon"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:background="@drawable/weixin_logonbutton_background"
        android:layout_marginBottom="5dp"
        />
    <Button
        android:id="@+id/logon_qq"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/qq_logon"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/qq_logonbutton_background"
        />

</LinearLayout>