<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="3dp">

    <!--<LinearLayout-->
        <!--android:id="@+id/linear1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:background="#C6C7CE"-->
        <!--android:orientation="horizontal">-->
        <TextView
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C6C7CE"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/news"
            android:textColor="#F000"
            android:textSize="30px" />

        <TextView
            android:id="@+id/clearCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C6C7CE"
            android:gravity="left"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/clear_Cache"
            android:textColor="#F000"
            android:textSize="30px"
            android:layout_below="@id/news"
            android:layout_marginTop="40dp"/>


    <TextView
        android:id="@+id/logoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C6C7CE"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/logoff"
        android:textColor="#d935dc"
        android:textSize="30px"
        android:layout_below="@id/clearCache"
        android:layout_marginTop="2dp"
        />

</RelativeLayout>